Added columns.txt file

--- a/scrapeCarData.ipynb
+++ b/scrapeCarData.ipynb
@@ -2123,7 +2123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"columns.txt\", \"r\") as file:\n",
+    "    existing_cols = [line.strip() for line in file if line.strip()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2131,7 +2141,7 @@
      "output_type": "stream",
      "text": [
       "Unique urls : 19396\n",
-      "Scraped urls : 4856\n"
+      "Scraped urls : 7203\n"
      ]
     }
    ],
@@ -2147,96 +2157,6 @@
     "scraped_urls = list(prev_result[~prev_result['bodyType'].isna()]['url'])\n",
     "\n",
     "print(f'Scraped urls : {len(scraped_urls)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "existing_cols = [\n",
-    " 'bodyType',\n",
-    " 'curbWeight',\n",
-    " 'cvnaCategories',\n",
-    " 'doors',\n",
-    " 'drivetrainDescription',\n",
-    " 'engineDescription',\n",
-    " 'exteriorColor',\n",
-    " 'exteriorColorOEM',\n",
-    " 'fairMarketValue',\n",
-    " 'frontHeadRoom',\n",
-    " 'frontLegRoom',\n",
-    " 'fuelCapacity',\n",
-    " 'fuelDescription',\n",
-    " 'groundClearance',\n",
-    " 'horsePower',\n",
-    " 'inServiceDate',\n",
-    " 'inServiceMiles',\n",
-    " 'installedPackages',\n",
-    " 'installedOptions',\n",
-    " 'interiorColor',\n",
-    " 'interiorColorOEM',\n",
-    " 'inventoryType',\n",
-    " 'isAutocheckReportAccidentVehicle',\n",
-    " 'kbbValue',\n",
-    " 'kbbVehicleId',\n",
-    " 'location',\n",
-    " 'make',\n",
-    " 'manufacturerBasicWarrantyMiles',\n",
-    " 'manufacturerBasicWarrantyMonths',\n",
-    " 'manufacturerDriveTrainWarrantyMiles',\n",
-    " 'manufacturerDriveTrainWarrantyMonths',\n",
-    " 'marketValueLoadedDateTime',\n",
-    " 'mileage',\n",
-    " 'model',\n",
-    " 'modelId',\n",
-    " 'mpgCity',\n",
-    " 'mpgCombined',\n",
-    " 'mpgHighway',\n",
-    " 'numberOfKeys',\n",
-    " 'overallHeight',\n",
-    " 'overallLength',\n",
-    " 'overallWidth',\n",
-    " 'parentModel',\n",
-    " 'previousPrice',\n",
-    " 'price',\n",
-    " 'priceUpdateDate',\n",
-    " 'priorUseTypes',\n",
-    " 'purchaseType',\n",
-    " 'rearHeadRoom',\n",
-    " 'rearLegRoom',\n",
-    " 'remainingWarrantyMiles',\n",
-    " 'remainingWarrantyMonths',\n",
-    " 'remainingDriveTrainWarrantyMiles',\n",
-    " 'remainingDriveTrainWarrantyMonths',\n",
-    " 'saleStatus',\n",
-    " 'seating',\n",
-    " 'standardEquipment',\n",
-    " 'stockImageData',\n",
-    " 'stockNumber',\n",
-    " 'stores',\n",
-    " 'transmission',\n",
-    " 'trim',\n",
-    " 'trunkCapacity',\n",
-    " 'vehicleId',\n",
-    " 'vexVdpImageData',\n",
-    " 'vin',\n",
-    " 'wheelbase',\n",
-    " 'year',\n",
-    " 'url',\n",
-    " 'owners',\n",
-    " 'bedLength',\n",
-    " 'highlights',\n",
-    " 'towCapacity',\n",
-    " 'brochureUrl',\n",
-    " 'windowStickerUrl',\n",
-    " 'evMpgeCity',\n",
-    " 'evMpgeHighway',\n",
-    " 'evRange',\n",
-    " 'evTaxCreditAmount',\n",
-    " 'remainingBatteryWarrantyMiles',\n",
-    " 'remainingBatteryWarrantyMonths']"
    ]
   },
   {
