--- a/scrapeCarData.ipynb
+++ b/scrapeCarData.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +26,13 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from webdriver_manager.chrome import ChromeDriverManager"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting individual car links from all pages"
    ]
   },
   {
@@ -2107,12 +2121,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Actual data collection"
+    "## Scraping individual car data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2123,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2155,7 @@
      "output_type": "stream",
      "text": [
       "Unique urls : 19396\n",
-      "Scraped urls : 7203\n"
+      "Scraped urls : 9341\n"
      ]
     }
    ],
@@ -2161,14 +2175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping car details:  37%|███▋      | 7206/19396 [11:08:12<18:50:22,  5.56s/it]\n"
+      "Scraping car details:  58%|█████▊    | 11206/19396 [9:08:18<6:40:44,  2.94s/it] \n"
      ]
     },
     {
@@ -2178,7 +2192,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     23\u001b[39m auto_check_url = auto_check + car_url[-\u001b[32m7\u001b[39m:]\n\u001b[32m     24\u001b[39m driver.get(auto_check_url)\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m time.sleep(\u001b[32m3\u001b[39m)\n\u001b[32m     26\u001b[39m auto_check_soup = BeautifulSoup(driver.page_source, \u001b[33m\"\u001b[39m\u001b[33mhtml.parser\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     28\u001b[39m driver.quit()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[119]\u001b[39m\u001b[32m, line 62\u001b[39m\n\u001b[32m     59\u001b[39m             \u001b[38;5;28;01mexcept\u001b[39;00m json.JSONDecodeError:\n\u001b[32m     60\u001b[39m                 \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m62\u001b[39m             time.sleep(random.uniform(\u001b[32m1\u001b[39m, \u001b[32m3\u001b[39m))\n\u001b[32m     64\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     65\u001b[39m     failed_url.append(car_url)\n",
       "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
@@ -2186,12 +2200,11 @@
    "source": [
     "# Set up headless Chrome browser\n",
     "auto_check = \"https://apik.carvana.io/merch/vdp/api/autocheck/v1/get?vehicleId=\"\n",
-    "column_names = ['bodyType','curbWeight','cvnaCategories','doors','drivetrainDescription','engineDescription','exteriorColor','fairMarketValue','frontHeadRoom','frontLegRoom','fuelCapacity','fuelDescription','groundClearance','highlights','horsePower','inServiceDate','inServiceMiles','installedOptions','interiorColor','inventoryType','isAutocheckReportAccidentVehicle','kbbValue','location','make','manufacturerBasicWarrantyMiles','manufacturerBasicWarrantyMonths','manufacturerDriveTrainWarrantyMiles','manufacturerDriveTrainWarrantyMonths','marketValueLoadedDateTime','mileage','model','modelId','mpgCity','mpgCombined','mpgHighway','numberOfKeys','overallHeight','overallLength','overallWidth','parentModel','previousPrice','price','priorUseTypes','purchaseType','rearHeadRoom','rearLegRoom','remainingWarrantyMiles','remainingWarrantyMonths','remainingDriveTrainWarrantyMiles','remainingDriveTrainWarrantyMonths','saleStatus','seating','standardEquipment','stockImageData','stockNumber','stores','towCapacity','transmission','trim','trunkCapacity','vehicleId','vexVdpImageData','vin','wheelbase','year']\n",
-    "car_data = pd.DataFrame()\n",
     "failed_url = []\n",
     "\n",
     "\n",
     "for i, car_url in tqdm(enumerate(unique_urls), total=len(unique_urls), desc=\"Scraping car details\"):\n",
+    "#for car_url in unique_urls:\n",
     "    try: \n",
     "        if car_url not in scraped_urls:\n",
     "            options = Options()\n",
@@ -2213,6 +2226,9 @@
     "\n",
     "            driver.quit()\n",
     "\n",
+    "            image_tags = car_soup.find_all(\"img\", {\"data-qa\": \"carousel-item\"})\n",
+    "            image_urls = [img['src'] for img in image_tags if 'src' in img.attrs]\n",
+    "\n",
     "            json_scripts = car_soup.find_all(\"script\", type=\"application/json\")\n",
     "            for script in json_scripts:\n",
     "                try:\n",
@@ -2229,16 +2245,33 @@
     "                    df = pd.DataFrame([vehicle_details])\n",
     "                    #car_data = pd.concat([car_data, df], ignore_index=True)\n",
     "                    df = df.reindex(columns=existing_cols, fill_value=\"\")\n",
-    "                    df.to_csv(\"car_data.csv\", index=False, mode='a', header=False) # appends data to my existing file\n",
+    "                    #df.to_csv(\"car_data.csv\", index=False, mode='a', header=False) # appends data to my existing file\n",
+    "                    with open('car_data.csv', mode='a', newline='', encoding='utf-8') as f:\n",
+    "                        df.to_csv(f, index=False, header=False)\n",
+    "                        f.flush()\n",
+    "\n",
+    "                    #### scraping the image urls ####\n",
+    "                    image_df = pd.DataFrame([{'make': df.loc[0,'make'], 'model': df.loc[0,'model'], 'image_url': url} for url in image_urls])\n",
+    "                    with open('images.csv', mode='a', newline='', encoding='utf-8') as f:\n",
+    "                        image_df.to_csv(f, index=False, header=False)\n",
+    "                        f.flush()\n",
     "                    \n",
     "                except json.JSONDecodeError:\n",
     "                    continue\n",
-    "\n",
+    "                \n",
     "                time.sleep(random.uniform(1, 3))\n",
+    "                \n",
     "    except Exception as e:\n",
     "        failed_url.append(car_url)\n",
     "# 346324"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
