--- a/Codes/clean.ipynb
+++ b/Codes/clean.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bk/xhs0vwln2116v0d35hflv8b80000gn/T/ipykernel_72830/3352399789.py:2: DtypeWarning: Columns (80) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('car_data.csv')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('car_data.csv')"
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,19 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "transmission\n",
-       "Auto      13747\n",
-       "Manual     1146\n",
+       "Auto      17911\n",
+       "Manual     1486\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,22 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "drivetrainDescription\n",
-       "FWD    5912\n",
-       "AWD    4675\n",
-       "4WD    2262\n",
-       "RWD    1959\n",
-       "2WD      85\n",
+       "FWD    7655\n",
+       "AWD    6069\n",
+       "4WD    2990\n",
+       "RWD    2550\n",
+       "2WD     133\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/xhs0vwln2116v0d35hflv8b80000gn/T/ipykernel_41354/675059998.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/bk/xhs0vwln2116v0d35hflv8b80000gn/T/ipykernel_72830/675059998.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -203,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/xhs0vwln2116v0d35hflv8b80000gn/T/ipykernel_41354/3713363305.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/bk/xhs0vwln2116v0d35hflv8b80000gn/T/ipykernel_72830/3713363305.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -230,14 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/xhs0vwln2116v0d35hflv8b80000gn/T/ipykernel_41354/2212989868.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/bk/xhs0vwln2116v0d35hflv8b80000gn/T/ipykernel_72830/2212989868.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,16 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14893"
+       "18485"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14194"
+       "18485"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +347,7 @@
        " 'Minivan']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,19 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "hasReportedAccident\n",
-       "False    12693\n",
-       "True      2200\n",
+       "False    16528\n",
+       "True      2869\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,34 +471,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "make                    0\n",
-       "model                   0\n",
-       "bodyType                0\n",
-       "seats                   0\n",
-       "numOfOwners             0\n",
-       "fuelType                0\n",
-       "horsePower              0\n",
-       "driveTrain              0\n",
-       "transmission            0\n",
-       "mileage                 0\n",
-       "mpgCity                 0\n",
-       "mpgHighway              0\n",
-       "evRange                10\n",
-       "evMpgeCity              4\n",
-       "evMpgeHighway           4\n",
-       "hasReportedAccident     0\n",
-       "price                   0\n",
-       "age                     0\n",
+       "make                   0\n",
+       "model                  0\n",
+       "bodyType               0\n",
+       "seats                  0\n",
+       "numOfOwners            0\n",
+       "fuelType               0\n",
+       "horsePower             0\n",
+       "driveTrain             0\n",
+       "transmission           0\n",
+       "mileage                0\n",
+       "mpgCity                0\n",
+       "mpgHighway             0\n",
+       "evRange                0\n",
+       "evMpgeCity             0\n",
+       "evMpgeHighway          0\n",
+       "hasReportedAccident    0\n",
+       "price                  0\n",
+       "age                    0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
