--- a/Codes/testing_models.ipynb
+++ b/Codes/testing_models.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
     "svr_pipeline = Pipeline(steps=[\n",
     "    ('target_enc', target_encoder),         # TargetEncoder gets access to y\n",
     "    ('rest', rest_preprocessor),\n",
-    "    ('regressor', SVR(kernel='rbf', C=100, epsilon=0.1))  # You can tune C, epsilon, kernel\n",
+    "    ('regressor', SVR(kernel='rbf', C=100, epsilon=0.1)) \n",
     "])\n",
     "\n",
     "# Fit model\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
     "knn_pipeline = Pipeline(steps=[\n",
     "    ('target_enc', target_encoder),         # TargetEncoder gets access to y\n",
     "    ('rest', rest_preprocessor),\n",
-    "    ('regressor', KNeighborsRegressor(n_neighbors=7))  # You can tune this\n",
+    "    ('regressor', KNeighborsRegressor(n_neighbors=7))\n",
     "])\n",
     "\n",
     "# Train the model\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
     "pls_pipeline = Pipeline(steps=[\n",
     "    ('target_enc', target_encoder),         # TargetEncoder gets access to y\n",
     "    ('rest', rest_preprocessor),\n",
-    "    ('regressor', PLSRegression(n_components=5))  # You can tune n_components\n",
+    "    ('regressor', PLSRegression(n_components=5)) \n",
     "])\n",
     "\n",
     "# Train the model\n",
